# oclivenewnew

./: .env.example  .gitignore  AGENTS.md  ARCHIVE_PROJECT_HISTORY.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  index.html  oclive-pack-editor.code-workspace  package-lock.json  package.json  push-all.bat  start-dev.bat  vite.config.js  练习
.cargo/: config.toml
crates/oclive_validation/: Cargo.toml
crates/oclive_validation/src/: json_keys.rs  lib.rs  manifest.rs  validate.rs  wasm_exports.rs
src-tauri/: Cargo.toml  README.md  tauri.conf.json  tauri.vite-external.json  test_exports.rs
src-tauri/capabilities/: migrated.json
src-tauri/config/: policy.toml
src-tauri/migrations/: 001_init.sql  002_add_current_emotion.sql  003_perf_indexes.sql  004_add_relation_state.sql  005_add_virtual_time.sql  006_role_pack_runtime.sql  007_role_scene_identity.sql  008_role_identity_stats.sql  009_remote_life_enabled.sql  010_user_presence_scene.sql  011_app_settings.sql  012_role_runtime_interaction_mode.sql  013_mutable_personality.sql
src-tauri/src/: env_flags.rs  error.rs  http_api.rs  lib.rs  main.rs
src-tauri/src/api/: agent.rs  chat.rs  conversation.rs  directory_plugin.rs  error.rs  event.rs  export.rs  hotkeys.rs  jump_monologue.rs  memory.rs  mod.rs  monologue.rs  plugin_bridge.rs  plugin_config.rs  plugin_debug.rs  plugin_index.rs  plugin_pack.rs  plugin_scaffold.rs  plugin_update.rs  policy.rs  role_pack.rs  scene.rs  settings.rs  time.rs
src-tauri/src/api/role/: display.rs  interaction.rs  mod.rs  runtime.rs
src-tauri/src/domain/: affect_policy.rs  agent.rs  chat_llm_fallback.rs  chat_turn.rs  chat_turn_rules.rs  complex_emotion.rs  emotion_analyzer.rs  event_detector.rs  event_estimator.rs  event_impact_ai.rs  knowledge_loader.rs  life_schedule.rs  local_plugin_bridge.rs  local_plugin_memory_pick.rs  memory_engine.rs  memory_retrieval.rs  mod.rs  mutable_profile_llm.rs  personality_engine.rs  plugin_host.rs  policy.rs  portrait_emotion_engine.rs  profile_personality.rs  prompt_assembler.rs  prompt_builder.rs  relation_engine.rs  remote_life_prompt.rs  repository.rs  role_manager.rs  role_manifest_validate.rs  user_emotion_analyzer.rs  user_identity.rs
src-tauri/src/domain/chat_engine/: co_present.rs  context.rs  favor.rs  mod.rs  presence.rs  scene.rs
src-tauri/src/infrastructure/: cache.rs  db.rs  deep_link.rs  function_call_parser.rs  hotkey_bindings.rs  llm.rs  llm_params.rs  mcp_client.rs  mod.rs  ollama_client.rs  ollama_timeouts.rs  plugin_data.rs  plugin_installer.rs  plugin_state.rs  repositories.rs  role_pack.rs  storage.rs
src-tauri/src/models/: author_pack.rs  chat.rs  dto.rs  emotion.rs  event.rs  favorability.rs  interaction_mode.rs  knowledge.rs  memory.rs  mod.rs  personality.rs  plugin_backends.rs  role.rs  role_manifest_disk.rs  role_settings_disk.rs  scene_disk.rs  ui_config.rs
src-tauri/src/state/: mod.rs
src-tauri/src/utils/: emotion.rs  json_loose.rs  mod.rs  ollama.rs  other_helpers.rs
src-tauri/tests/: chat_integration.rs  http_api_chat.rs  knowledge_pack.rs  perf_chat_turns.rs  plugin_backends_v2_resolve.rs  policy_e2e_matrix.rs  role_cache_knowledge_reload.rs  week3_004_api.rs
src-tauri/tests/snapshots/: policy_e2e_matrix.json
(+292 files in other folders)
