[package]
name = "oclivenewnew-tauri"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "oclive desktop companion — Tauri + Vue + Rust dialogue engine"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
oclive_validation = { path = "../crates/oclive_validation" }
tauri = { version = "1.5", features = [ "protocol-asset", "shell-open", "dialog-open", "dialog-save", "fs-write-file", "fs-read-file", "global-shortcut"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
parking_lot = "0.12"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.11", features = ["json", "blocking"] }
once_cell = "1.0"
tempfile = "3.8"
toml = "0.8"
walkdir = "2.5"
semver = "1.0"
notify = "6"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
sha2 = "0.11.0"
tauri-plugin-deep-link = "0.1.2"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
