[package]
name = "oclive_validation"
version = "0.1.0"
edition = "2021"
description = "Shared role pack manifest validation (native + wasm for pack editor)"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
wasm = ["dep:wasm-bindgen"]
